final changes and submission.

--- a/public/html/add.html
+++ b/public/html/add.html
@@ -35,7 +35,7 @@
                     <label for="recipe-description">Recipe Description:</label><br>
                     <textarea id="recipe-description" name="recipe-description" rows="3" cols="80" required></textarea><br>
 
-                    <label for = "recipe-category">Recipe Category/Cuisine Type: </label><br>
+                    <label for = "recipe-category">Recipe Category (savoury / appetizers / drinks): </label><br>
                     <input type = "text" id = "recipe-category" name = "recipe-category" required><br>
 
                     <label for="recipe-details">Preparation and Cooking Duration:</label><br>
