--- a/public/html/home.html
+++ b/public/html/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking Hub - Home</title>
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="icon" type="image/png" href="../assets/logo.png"> 
 </head>
 <body>
     <div class="entire">    
@@ -47,7 +48,7 @@
 
                 <div class = "search-bar" style="display: flex;">
                     <form action="" style="margin-top: 50px;">
-                        <input type = "text" id = "search" name = "search" placeholder="Search a recipe..."> 
+                        <input type = "text" id = "search" name = "search" placeholder="Search a recipe or category (savoury, drinks, appetizers)"> 
 
                     </form>
                 </div>
