--- a/public/recipes/rec3.html
+++ b/public/recipes/rec3.html
@@ -4,7 +4,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Noodl</title>
+                <title>Nasi Goreng</title>
                 <link rel="stylesheet" href="rec.css">
             </head>
             <body>
@@ -22,23 +22,29 @@
                 </div>
                 <div class="page">
                     <div class="recipe-info">
-                        <h1 id="recipe-title">Noodl</h1> <!--  food name/type -->
-                        <p id="recipe-description">asd</p> <!-- description -->
+                        <h1 id="recipe-title">Nasi Goreng</h1> <!--  food name/type -->
+                        <p id="recipe-description">Savory Nasi Goreng — This Indonesian fried rice features fragrant jasmine rice stir-fried with garlic, shallots, and soy sauce. Mixed with tender chicken, succulent shrimp, and fresh vegetables, it's topped with a fried egg, crispy shallots, and tangy pickles. A burst of authentic flavors, perfect for a quick dinner or a special treat.</p> <!-- description -->
                         <br><br>
                         <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-                        <p id="category">asd</p>
+                        <p id="category">savoury</p>
                         <h2>Duration:</h2>
-                        <p id="recipe-duration">asd</p> <!-- details to be entered here -->
+                        <p id="recipe-duration">30 min</p> <!-- details to be entered here -->
                     </div>
                     <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
                         <h2 id="sub1">Ingredients:</h2>
-                        <p id="ing">asd</p>
+                        <p id="ing">cold cooked rice, neutral oil, Kecap Manis (sweet soy sauce), regular soy sauce, salt, white pepper, and optional additions like meat, green onions, eggs, chili sauce, fried shallots.</p>
                     </div>
                     <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
                         <h2 id="sub2">Preparations and Instructions:</h2>
-                        <p id="inst">asd</p>
+                        <p id="inst">To prepare Nasi Goreng, start by heating cooking oil in a large skillet or wok over medium-high heat. Add minced garlic and chopped shallots or onions, sautéing until fragrant and lightly golden. If using, add diced chicken, shrimp, or your preferred protein, cooking until it's cooked through. Push the protein to the side of the skillet and crack eggs into the empty space, scrambling them until cooked.
+
+Next, add cooked rice to the skillet, breaking up any clumps and stirring to combine with the protein and eggs. Pour in kecap manis (sweet soy sauce), soy sauce, and other optional sauces like fish sauce or oyster sauce for added depth of flavor. Toss everything together thoroughly, ensuring the rice is evenly coated with the sauces.
+
+Add vegetables such as sliced carrots, peas, and bell peppers to the skillet, continuing to stir-fry until the vegetables are tender-crisp. Season with salt and pepper to taste. Once everything is heated through and well combined, remove from heat.
+
+Serve the Nasi Goreng hot, garnished with fried shallots for crunch, and accompanied by cucumber slices, tomato slices, or fresh cilantro for additional freshness. Lime or lemon wedges on the side can provide a tangy contrast. Nasi Goreng is best enjoyed immediately while hot, offering a delicious blend of savory flavors and textures in every bite.</p>
                     </div>
-                    <img src="../../node/node_files/uploads/1719043233750-spaghetti.jpeg" id="img" alt="Recipe Image">
+                    
                 </div>
 
             </body>
