--- a/public/recipes/rec4.html
+++ b/public/recipes/rec4.html
@@ -4,7 +4,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>asd</title>
+                <title>Blueberry Mojito</title>
                 <link rel="stylesheet" href="rec.css">
             </head>
             <body>
@@ -22,23 +22,22 @@
                 </div>
                 <div class="page">
                     <div class="recipe-info">
-                        <h1 id="recipe-title">asd</h1> <!--  food name/type -->
-                        <p id="recipe-description">asdasd</p> <!-- description -->
+                        <h1 id="recipe-title">Blueberry Mojito</h1> <!--  food name/type -->
+                        <p id="recipe-description">Indulge in the vibrant flavors of a Blueberry Mojito, a refreshing twist on the classic Cuban cocktail. This delightful concoction combines fresh blueberries, fragrant mint leaves, and zesty lime wedges muddled together with a hint of white sugar to release their essence. A splash of white rum adds a smooth depth of flavor, while fizzy club soda brings a refreshing effervescence to the drink.</p> <!-- description -->
                         <br><br>
                         <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-                        <p id="category">asda</p>
+                        <p id="category">drinks</p>
                         <h2>Duration:</h2>
-                        <p id="recipe-duration">sdasd</p> <!-- details to be entered here -->
+                        <p id="recipe-duration">15 min</p> <!-- details to be entered here -->
                     </div>
                     <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
                         <h2 id="sub1">Ingredients:</h2>
-                        <p id="ing">asd</p>
+                        <p id="ing">fresh blueberries, mint leaves, lime wedges, white sugar, white rum, club soda, and ice cubes</p>
                     </div>
                     <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
                         <h2 id="sub2">Preparations and Instructions:</h2>
-                        <p id="inst">asd</p>
+                        <p id="inst">For the preparation, start by muddling fresh blueberries, mint leaves, and lime wedges with sugar to release their flavors into the glass. Next, add a shot of white rum and stir the mixture thoroughly. Fill the glass with ice cubes to chill the drink, then pour in club soda to add effervescence. Stir gently once more to blend all ingredients evenly. Garnish your Blueberry Mojito with a sprig of mint and a few additional blueberries to enhance both the appearance and the taste.</p>
                     </div>
-                    <img src="../../node/node_files/uploads/1719043536963-06d9e508dc968d92f858e106bf6a95a6.jpg" id="img" alt="Recipe Image">
                 </div>
 
             </body>
