--- a/public/html/edit.html
+++ b/public/html/edit.html
@@ -44,7 +44,7 @@
                     <input type="text" id="recipe-title" name="recipe-title" required><br>
                     <label for="recipe-description">Recipe Description:</label><br>
                     <textarea id="recipe-description" name="recipe-description" rows="3" cols="80" required></textarea><br>
-                    <label for="recipe-category">Recipe Category/Cuisine Type:</label><br>
+                    <label for="recipe-category">Recipe Category (savoury / appetizers / drinks): </label><br>
                     <input type="text" id="recipe-category" name="recipe-category" required><br>
                     <label for="recipe-details">Preparation and Cooking Duration:</label><br>
                     <input type="text" id="recipe-details" name="recipe-details" required><br>
