--- a/public/recipes/rec2.html
+++ b/public/recipes/rec2.html
@@ -4,7 +4,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Pasta</title>
+                <title>Spaghetti Carbonara</title>
                 <link rel="stylesheet" href="rec.css">
             </head>
             <body>
@@ -22,23 +22,23 @@
                 </div>
                 <div class="page">
                     <div class="recipe-info">
-                        <h1 id="recipe-title">Pasta</h1> <!--  food name/type -->
-                        <p id="recipe-description">asd</p> <!-- description -->
+                        <h1 id="recipe-title">Spaghetti Carbonara</h1> <!--  food name/type -->
+                        <p id="recipe-description">A traditional Italian dish featuring al dente spaghetti tossed in a rich and creamy sauce made from eggs and Parmesan cheese. Infused with the smoky flavor of crispy pancetta, and seasoned with freshly ground black pepper, this pasta dish is both simple and indulgent. Finished with a sprinkling of extra cheese and a touch of parsley, our Spaghetti Carbonara offers a perfect blend of savory and creamy notes that will delight your taste buds and leave you craving more.</p> <!-- description -->
                         <br><br>
                         <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-                        <p id="category">asd</p>
+                        <p id="category">savoury</p>
                         <h2>Duration:</h2>
-                        <p id="recipe-duration">asd</p> <!-- details to be entered here -->
+                        <p id="recipe-duration">50 min</p> <!-- details to be entered here -->
                     </div>
                     <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
                         <h2 id="sub1">Ingredients:</h2>
-                        <p id="ing">asd</p>
+                        <p id="ing">200g spaghetti, 100g pancetta, 2 large eggs, 50g pecorino cheese, 50g parmesan, 2 plump garlic cloves - peeled and left whole, 50g unsalted butter, sea salt and freshly grated black pepper</p>
                     </div>
                     <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
                         <h2 id="sub2">Preparations and Instructions:</h2>
-                        <p id="inst">sd</p>
+                        <p id="inst">Put a large saucepan of water on to boil. Finely chop the pancetta, having first removed any rind. Beat the eggs in a medium bowl, season with a little freshly grated black pepper and set everything aside. Add the spaghetti to the water and cook according to the pack instructions. Squash the garlic with the blade of a knife, just to bruise it. Melt the butter in a deep frying pan, then add the pancetta and garlic. Leave to cook on a medium heat for about 5 minutes, stirring often, until the pancetta is golden and crisp. Take the pan of spaghetti off the heat. Quickly pour in the eggs and pancetta, and toss together. Serve immediately with a little sprinkling of the remaining cheese and a grating of black pepper.</p>
                     </div>
-                    <img src="../../node/node_files/uploads/1719043223207-pasta.jpg" id="img" alt="Recipe Image">
+                    
                 </div>
 
             </body>
